Handle reverse flow direction when converting iterator coords for a subgrid https://bugs.webkit.org/show_bug.cgi?id=236955

Reviewed by Dean Jackson.

Source/WebCore:

When recursing into a subgrid via createForSubgrid, we convert the iterator's
position into coordinates relative to the subgrid. This handles the case where
the subgrid has a reverse flow direction (RTL vs LTR) and swaps the position
to be relative to the opposite edge.

Marks existing WPT grid-gap-007.html as passing

* rendering/Grid.cpp:
(WebCore::GridIterator::createForSubgrid):

LayoutTests:

* TestExpectations:

Marked grid-gap-007.html as now passing, and added bug annotations to
remaining subgrid failures.



Canonical link: https://commits.webkit.org/247850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290572 268f45cc-cd09-0410-ab3c-d52691b4dbfc